fix: frature image date alignment issue

--- a/assets/css/unminified/main.css
+++ b/assets/css/unminified/main.css
@@ -327,6 +327,7 @@ th {
   min-height: 1px;
   padding-left: 20px;
   padding-right: 20px;
+  float: left;
 }
 
 @media (max-width: 992px) {
