--- a/assets/css/unminified/style-flex-rtl.css
+++ b/assets/css/unminified/style-flex-rtl.css
@@ -383,6 +383,7 @@ th {
   min-height: 1px;
   padding-right: 20px;
   padding-left: 20px;
+  float: right;
 }
 
 @media (max-width: 992px) {
