--- a/sass/grid/_grid-flex.scss
+++ b/sass/grid/_grid-flex.scss
@@ -36,6 +36,7 @@
         // Inner gutter via padding
         padding-left: ($grid-gutter-width / 2);
         padding-right: ($grid-gutter-width / 2);
+        float:left;
     }
 
     @media (max-width: $mx-col-lg) {
